Salesforce/main/default/main/default/objects/Opportunity/fields/Anexo_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Anexo_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Anexo Relacionado</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades (Anexo Relacionado)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>