Salesforce/main/default/main/default/objects/Opportunity/fields/Aprobada_por_multiplicador__c.field-meta.xml
<CustomField>
    <fullName>Aprobada_por_multiplicador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobada por multiplicador</label>
    <type>Checkbox</type>
</CustomField>