Salesforce/main/default/main/default/objects/Opportunity/fields/Aprovar_Comercializada__c.field-meta.xml
<CustomField>
    <fullName>Aprovar_Comercializada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovar Comercializada</label>
    <type>Checkbox</type>
</CustomField>