Salesforce/main/default/main/default/objects/Opportunity/fields/Aprovar_Uso_Proprio__c.field-meta.xml
<CustomField>
    <fullName>Aprovar_Uso_Proprio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovar Uso Proprio</label>
    <type>Checkbox</type>
</CustomField>