Salesforce/main/default/main/default/objects/Opportunity/fields/Atualizacao__c.field-meta.xml
<CustomField>
    <fullName>Atualizacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atualização</label>
    <type>Checkbox</type>
</CustomField>