Salesforce/main/default/main/default/objects/Opportunity/fields/Autoriza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_Comercial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador que los comerciales autorizan el relatorio de venda para posteriormente facturarlo</description>
    <label>Autoriza Comercial</label>
    <type>Checkbox</type>
</CustomField>