Salesforce/main/default/main/default/objects/Opportunity/fields/Categoria_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Cliente__c</fullName>
    <label>Categoria Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRATA</fullName>
            </value>
            <value>
                <fullName>OURO</fullName>
            </value>
            <value>
                <fullName>PLATINUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>