Salesforce/main/default/main/default/objects/Opportunity/fields/CNPJ_CPF_Anexo__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF_Anexo__c</fullName>
    <label>CNPJ/CPF Anexo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>