Salesforce/main/default/main/default/objects/Opportunity/fields/Cobrado__c.field-meta.xml
<CustomField>
    <fullName>Cobrado__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cobrado R$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>