Salesforce/main/default/main/default/objects/Opportunity/fields/Comentarios_de_confirmacion__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_de_confirmacion__c</fullName>
    <label>Comentários portal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>