Salesforce/main/default/main/default/objects/Opportunity/fields/Condi_o_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Condi_o_de_pagamento__c</fullName>
    <label>Condição de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 quotas</fullName>
            </value>
            <value>
                <fullName>3 quotas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>