Salesforce/main/default/main/default/objects/Opportunity/fields/Condicion_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_Pago__c</fullName>
    <label>Condiciones de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZC00 - A Vista</fullName>
            </value>
            <value>
                <fullName>ZC01 - 60 dias Data Ordem</fullName>
            </value>
            <value>
                <fullName>ZC01 - A Vista</fullName>
            </value>
            <value>
                <fullName>ZC01 - A Vista na data do Pedido</fullName>
            </value>
            <value>
                <fullName>ZC01 - 15 dias Data Fatura</fullName>
            </value>
            <value>
                <fullName>ZC01 - 30 dias Data Fatura</fullName>
            </value>
            <value>
                <fullName>ZC01 - 45 dias Data Fatura</fullName>
            </value>
            <value>
                <fullName>ZC01 - 60 dias Data Fatura</fullName>
            </value>
            <value>
                <fullName>ZC01 - Antecipado</fullName>
            </value>
            <value>
                <fullName>ZC01 - A vista - 15 de Dezembro</fullName>
            </value>
            <value>
                <fullName>ZC01 - A vista Faturamento Royalties</fullName>
            </value>
            <value>
                <fullName>ZC01 - A vista - 20 dias Data Fatura</fullName>
            </value>
            <value>
                <fullName>ZC01 - Parcelado: 30,60 e 90 dias data fatura</fullName>
            </value>
            <value>
                <fullName>ZC01 - Parcelado: 30,60,90 e 120 dias data fatura</fullName>
            </value>
            <value>
                <fullName>ZC01 - Parcelado: 30 e 60 dias data fatura</fullName>
            </value>
            <value>
                <fullName>ZC02 - A vista - 15 de Dezembro</fullName>
            </value>
            <value>
                <fullName>ZC02 - A vista Faturamento Royalties</fullName>
            </value>
            <value>
                <fullName>ZC03 - 15 dias Data Fatura</fullName>
            </value>
            <value>
                <fullName>ZC05 - 30 dias Data Fatura</fullName>
            </value>
            <value>
                <fullName>ZC06 - 45 dias Data Fatura</fullName>
            </value>
            <value>
                <fullName>ZC07 - Parcelado: 30,60 e 90 dias data fatura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>