Salesforce/main/default/main/default/objects/Opportunity/fields/Confirmado__c.field-meta.xml
<CustomField>
    <fullName>Confirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check de confirmacion de entrega del producto</description>
    <label>Confirmado</label>
    <type>Checkbox</type>
</CustomField>