Salesforce/main/default/main/default/objects/Opportunity/fields/CorreoElectronicoSiteUser__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoSiteUser__c</fullName>
    <description>Se usa para guardar el correo electronico del siteuser</description>
    <label>Correo Electronico Site User</label>
    <type>Email</type>
</CustomField>