Salesforce/main/default/main/default/objects/Opportunity/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cotización en reales del kg. de SOJA</description>
    <inlineHelpText>Cotización en reales del kg. de SOJA</inlineHelpText>
    <label>Cotizacion en R$</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>