Salesforce/main/default/main/default/objects/Opportunity/fields/CRM_Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>CRM_Multiplicador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Multiplicador</label>
    <referenceTo>CRM_Multiplicador__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>