Salesforce/main/default/main/default/objects/Opportunity/fields/Cuenta_y_orden__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_y_orden__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recebedor conta/ordem</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Venda Conta e Ordem)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>