Salesforce/main/default/main/default/objects/Opportunity/fields/Cultura__c.field-meta.xml
<CustomField>
    <fullName>Cultura__c</fullName>
    <label>Cultura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milho</fullName>
            </value>
            <value>
                <fullName>Soja</fullName>
                <default>true</default>
                <label>Soja</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>