Salesforce/main/default/main/default/objects/Opportunity/fields/Despachante__c.field-meta.xml
<CustomField>
    <fullName>Despachante__c</fullName>
    <label>Despachante</label>
    <length>100</length>
    <type>Text</type>
</CustomField>