Salesforce/main/default/main/default/objects/Opportunity/fields/Despachante_Aduanero__c.field-meta.xml
<CustomField>
    <fullName>Despachante_Aduanero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Despachante Aduanero en las Opp de Exportación.</description>
    <label>Despachante Aduaneiro</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Despachante Aduaneiro)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>