Salesforce/main/default/main/default/objects/Opportunity/fields/Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Destinatario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinatario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Cuenta destinatario)</relationshipLabel>
    <relationshipName>Oportunidades_destinatario</relationshipName>
    <type>Lookup</type>
</CustomField>