Salesforce/main/default/main/default/objects/Opportunity/fields/Desvio_Venda_de_Basica__c.field-meta.xml
<CustomField>
    <fullName>Desvio_Venda_de_Basica__c</fullName>
    <description>Calcula el descuento aplicado sobre el precio del producto en realcion con el precio de entrada de lista.</description>
    <formula>(Total__c / Preco_Total_Sugerido_Com_Juros__c) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desvio Venda de Basica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>