Salesforce/main/default/main/default/objects/Opportunity/fields/Detalhe_de_Produtos__c.field-meta.xml
<CustomField>
    <fullName>Detalhe_de_Produtos__c</fullName>
    <description>HYPERLINK(&quot;https://na57.salesforce.com/00O0b000003zd32?pv0=&quot;+Id, &quot;Link a Produtos&quot;)</description>
    <formula>HYPERLINK(&quot;https://na57.salesforce.com/apex/OppLineItems2?id=&quot;+Id, &quot;Link a Produtos&quot;,&quot;_blank&quot;)</formula>
    <inlineHelpText>HYPERLINK(&quot;https://na57.salesforce.com/00O0b000003zd32?pv0=&quot;+Id, &quot;Link a Produtos&quot;)</inlineHelpText>
    <label>Detalhe de Produtos</label>
    <type>Text</type>
</CustomField>