Salesforce/main/default/main/default/objects/Opportunity/fields/Dias_de_segunda_prorroga_o_pedido__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_segunda_prorroga_o_pedido__c</fullName>
    <formula>IF(ISBLANK(Novo_segundo_vencimento__c), 0 , Novo_segundo_vencimento__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de segunda prorrogação pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>