Salesforce/main/default/main/default/objects/Opportunity/fields/Dias_de_terceira_prorroga_o_pedido__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_terceira_prorroga_o_pedido__c</fullName>
    <formula>IF(ISBLANK(Novo_terceiro_vencimento__c), 0 , Novo_terceiro_vencimento__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de terceira prorrogação pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>