Salesforce/main/default/main/default/objects/Opportunity/fields/Dias_de_terceira_prorrogaco__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_terceira_prorrogaco__c</fullName>
    <formula>IF(ISBLANK(Terceiro_vencimento__c), 0 , Terceiro_vencimento__c -  DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de terceira prorrogação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>