Salesforce/main/default/main/default/objects/Opportunity/fields/Ejercicio__c.field-meta.xml
<CustomField>
    <fullName>Ejercicio__c</fullName>
    <label>Ejercicio</label>
    <length>4</length>
    <type>Text</type>
</CustomField>