Salesforce/main/default/main/default/objects/Opportunity/fields/Email_user__c.field-meta.xml
<CustomField>
    <fullName>Email_user__c</fullName>
    <label>Email user</label>
    <type>Email</type>
</CustomField>