Salesforce/main/default/main/default/objects/Opportunity/fields/En_Proc_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>En_Proc_Aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En Proc Aprobacion</label>
    <type>Checkbox</type>
</CustomField>