Salesforce/main/default/main/default/objects/Opportunity/fields/Entregas__c.field-meta.xml
<CustomField>
    <fullName>Entregas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entregas</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades (Venda)</relationshipLabel>
    <relationshipName>Entregas</relationshipName>
    <type>Lookup</type>
</CustomField>