Salesforce/main/default/main/default/objects/Opportunity/fields/Enviamos_por_correio__c.field-meta.xml
<CustomField>
    <fullName>Enviamos_por_correio__c</fullName>
    <description>Dato de la venta de basica, es por multiplicador y por safra</description>
    <label>Enviamos por correio?</label>
    <type>Date</type>
</CustomField>