Salesforce/main/default/main/default/objects/Opportunity/fields/Epoca_de_Plantio__c.field-meta.xml
<CustomField>
    <fullName>Epoca_de_Plantio__c</fullName>
    <description>Se utiliza Verano por default. Al indicar Invierno se está indicando lo que antes era la Safrina.</description>
    <label>Época de Plantio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verão</fullName>
                <default>true</default>
                <label>Verão</label>
            </value>
            <value>
                <fullName>Inverno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>