Salesforce/main/default/main/default/objects/Opportunity/fields/Es_Anexo_II__c.field-meta.xml
<CustomField>
    <fullName>Es_Anexo_II__c</fullName>
    <formula>IF(RecordType.Name == &apos;Anexo II&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Anexo II</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>