Salesforce/main/default/main/default/objects/Opportunity/fields/Estado_Anexos_Portal_Miltiplicadores__c.field-meta.xml
<CustomField>
    <fullName>Estado_Anexos_Portal_Miltiplicadores__c</fullName>
    <formula>CASE(StageName, &quot;Edición&quot;, &quot;Edição&quot;, &quot;Edición post Vencimiento&quot;, &quot;Edición&quot;, &quot;Edición Vencida&quot;, &quot;Edición&quot;, &quot;Pendiente de Análisis&quot;, &quot;Bloqueado&quot;, &quot;Pendiente de Aprobación&quot;, &quot;Bloqueado&quot;, &quot;Desaprobado x Gerente&quot;, &quot;Rechazado&quot;, &quot;Rechazada Supervisor&quot;, &quot;Rechazado&quot;, &quot;Aprobada&quot;, &quot;Aprovado&quot;, &quot;AN - Anulada&quot;, &quot;Anulado&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fase</label>
    <type>Text</type>
</CustomField>