Salesforce/main/default/main/default/objects/Opportunity/fields/Estado_de_Comercializacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Comercializacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Utilizado para el Anexo I</description>
    <inlineHelpText>Utilizado para el Anexo I</inlineHelpText>
    <label>Estado de Comercializacion</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Oportunidades (Estado de Comercializacion)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>