Salesforce/main/default/main/default/objects/Opportunity/fields/Estado_de_produccion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_produccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Estado de produccion, para incluir en el contrato de multiplicacion</description>
    <inlineHelpText>Estado de produccion, para incluir en el contrato de multiplicacion</inlineHelpText>
    <label>Estado de produccion</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>