Salesforce/main/default/main/default/objects/Opportunity/fields/Estado_Destino__c.field-meta.xml
<CustomField>
    <fullName>Estado_Destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica el Estado hacia el cual va la mercadería para calcular la tasa impositiva</description>
    <label>Estado Destino</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Oportunidades (Estado Destino)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>