Salesforce/main/default/main/default/objects/Opportunity/fields/Estado_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Facturacion__c</fullName>
    <label>Estado Facturacion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PE Contabilizar</fullName>
            </value>
            <value>
                <fullName>Contabilizada</fullName>
            </value>
            <value>
                <fullName>Impresa</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>