Salesforce/main/default/main/default/objects/Opportunity/fields/Estado_Origem__c.field-meta.xml
<CustomField>
    <fullName>Estado_Origem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica el Estado desde el cual va a salir la mercadería para el cálculo de la tasa impositva</description>
    <label>Estado Origem</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Introduza um Estado de Origem</errorMessage>
        <filterItems>
            <field>Estado__c.Estado_de_Origem__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Oportunidades (Estado Origem)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>