Salesforce/main/default/main/default/objects/Opportunity/fields/Estimativas__c.field-meta.xml
<CustomField>
    <fullName>Estimativas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimativas</label>
    <referenceTo>Requisicao_de_compra__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>