Salesforce/main/default/main/default/objects/Opportunity/fields/Fecha_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Entrega__c</fullName>
    <label>Data do Remessa</label>
    <type>Date</type>
</CustomField>