Salesforce/main/default/main/default/objects/Opportunity/fields/Filtro_Contrato_Mult__c.field-meta.xml
<CustomField>
    <fullName>Filtro_Contrato_Mult__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se usa para filtrar los aditivos de la cuenta de la opp en procesar anexos.</description>
    <label>Filtro Contrato Mult</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contrato__c.Multiplicador__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contrato__c.Safra__c</field>
            <operation>equals</operation>
            <valueField>$Source.Safra__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contrato__c.RecordType.Name</field>
            <operation>contains</operation>
            <value>Aditivo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>