Salesforce/main/default/main/default/objects/Opportunity/fields/Forma_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Dinheiro</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Cartao de Credito</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Cartao de Debito</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Credito Loja</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Vale Alimentacao</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Vale Refeicao</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Vale Presente</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Vale Combustivel</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Outros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>