Salesforce/main/default/main/default/objects/Opportunity/fields/Importador__c.field-meta.xml
<CustomField>
    <fullName>Importador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Importador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Importações</relationshipLabel>
    <relationshipName>Oportunidades_Expo</relationshipName>
    <type>Lookup</type>
</CustomField>