Salesforce/main/default/main/default/objects/Opportunity/fields/Inicio_Cargamento__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Cargamento__c</fullName>
    <label>Inicio de Cargamento</label>
    <type>Date</type>
</CustomField>