Salesforce/main/default/main/default/objects/Opportunity/fields/Invierno__c.field-meta.xml
<CustomField>
    <fullName>Invierno__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la Producción de Básica se va a realizar en Invierno</description>
    <label>Inverno</label>
    <type>Checkbox</type>
</CustomField>