Salesforce/main/default/main/default/objects/Opportunity/fields/IsClon__c.field-meta.xml
<CustomField>
    <fullName>IsClon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClon</label>
    <type>Checkbox</type>
</CustomField>