Salesforce/main/default/main/default/objects/Opportunity/fields/Kg_de_produto__c.field-meta.xml
<CustomField>
    <fullName>Kg_de_produto__c</fullName>
    <label>Kg de produto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>