Salesforce/main/default/main/default/objects/Opportunity/fields/Licencias__c.field-meta.xml
<CustomField>
    <fullName>Licencias__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si corresponde a la sociedad de licencias MBAS.</description>
    <label>Licencias</label>
    <type>Checkbox</type>
</CustomField>