Salesforce/main/default/main/default/objects/Opportunity/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <length>40</length>
    <type>Text</type>
</CustomField>