Salesforce/main/default/main/default/objects/Opportunity/fields/Marca_Completa__c.field-meta.xml
<CustomField>
    <fullName>Marca_Completa__c</fullName>
    <description>Marca que debe mostrarse en el envío de mails de anexos</description>
    <formula>IF(Owner.Profile.Name = &apos;Administrativo_licencias&apos;,&apos;GDM Licenciamento&apos;,IF(AND(Owner.Profile.Name &lt;&gt; &apos;Administrativo_licencias&apos;,ISPICKVAL(Marca__c, &apos;DSEM&apos;)),&apos;DONMARIO SEMENTES&apos;, IF(AND(Owner.Profile.Name &lt;&gt; &apos;Administrativo_licencias&apos;,ISPICKVAL(Marca__c, &apos;BRMX&apos;)),&apos;BRASMAX GENÉTICA&apos;, &apos;NEOGEN&apos;)))</formula>
    <label>Marca Completa</label>
    <type>Text</type>
</CustomField>