Salesforce/main/default/main/default/objects/Opportunity/fields/Marca_Enviar_SAP__c.field-meta.xml
<CustomField>
    <fullName>Marca_Enviar_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marca Enviar SAP</label>
    <type>Checkbox</type>
</CustomField>