Salesforce/main/default/main/default/objects/Opportunity/fields/Modalidade_do_frete__c.field-meta.xml
<CustomField>
    <fullName>Modalidade_do_frete__c</fullName>
    <label>Modalidade do frete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Por conta do emitente</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Por conta do Destinatario/Remetente</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Por conta de terceiros</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Sem frete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>