Salesforce/main/default/main/default/objects/Opportunity/fields/Monsanto_Autoriz__c.field-meta.xml
<CustomField>
    <fullName>Monsanto_Autoriz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monsanto Autorizó ?</label>
    <type>Checkbox</type>
</CustomField>