Salesforce/main/default/main/default/objects/Opportunity/fields/Monsanto_Fecha_Aut__c.field-meta.xml
<CustomField>
    <fullName>Monsanto_Fecha_Aut__c</fullName>
    <label>Monsanto Data Aut.</label>
    <type>Date</type>
</CustomField>