Salesforce/main/default/main/default/objects/Opportunity/fields/Motivo_de_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Rechazo__c</fullName>
    <description>Campo para indicar el motivo de Rechazo y que el mismo se pueda visualizar en el portal</description>
    <label>Motivo de Rejeição</label>
    <type>TextArea</type>
</CustomField>