Salesforce/main/default/main/default/objects/Opportunity/fields/Negocio__c.field-meta.xml
<CustomField>
    <fullName>Negocio__c</fullName>
    <label>Negócio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fechado</fullName>
            </value>
            <value>
                <fullName>Franqueados</fullName>
            </value>
            <value>
                <fullName>Reserva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>