Salesforce/main/default/main/default/objects/Opportunity/fields/Negocio_por_Conta__c.field-meta.xml
<CustomField>
    <fullName>Negocio_por_Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Negócio</label>
    <referenceTo>Negocio_por_Conta__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>