Salesforce/main/default/main/default/objects/Opportunity/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <length>50</length>
    <type>Text</type>
</CustomField>